# Skeleton_Engine

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: implementation-plan.md
