[project]
name = "gesture-command"
version = "0.1.0"
description = "Map hand gestures to keypresses, mouse actions, shell commands, and macros"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "pynput>=1.7.0",
]

[project.scripts]
gesture-command = "gesture_command.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
